fix post listing date/title overflow

--- a/source/stylesheets/styles.css.scss
+++ b/source/stylesheets/styles.css.scss
@@ -163,7 +163,7 @@ table {
         background: #f3f3f3;
         border-radius: 1em;
         display: block;
-        padding: .5em 5em .5em 1em;
+        padding: .5em 9em .5em 1em;
         margin: 0 0 1em;
         position: relative;
 
